fix: fixed overlap issue in mobile view

--- a/src/styles/Developers.module.scss
+++ b/src/styles/Developers.module.scss
@@ -73,7 +73,8 @@
   // height: 5vw;
   object-fit: contain;
 
-  @media screen and (max-height: 700px), screen and (max-width: 1100px) {
+  @media screen and (max-height: 700px),
+  screen and (max-width: 1100px) {
     top: 6px;
     height: 40px;
   }
@@ -131,7 +132,8 @@
     padding-inline: 0.5rem;
     transition: all 0.2s ease-in-out;
 
-    @media screen and (max-height: 700px), screen and (max-width: 600px) {
+    @media screen and (max-height: 700px),
+    screen and (max-width: 600px) {
       font-size: 0.7rem;
     }
   }
@@ -184,10 +186,12 @@
   width: 50vw;
   top: 33vh;
   left: 25vw;
+
   @media screen and (max-width: 1700px) {
     width: 60vw;
     left: 20vw;
   }
+
   @media screen and (max-width: 1200px) {
     width: 90vw;
     left: 5vw;
@@ -228,27 +232,33 @@
     width: 88%;
     flex-wrap: wrap;
   }
+
   @media screen and (max-width: 800px) {
     top: 0;
     left: 0;
     height: 100vh;
     width: 100vw;
+
     .folderBackground {
       opacity: 0;
     }
+
     .verticalHeading {
       top: 145px;
       left: 50%;
       width: 100%;
       transform: translateX(-50%);
     }
+
     .backButton {
       top: 21%;
     }
+
     .developerInfoCardContainer {
       overflow: scroll;
       top: 27%;
-      height: 66.5%;
+      height: auto;
+      bottom: 70px;
       justify-content: space-around;
       gap: 40px;
     }
@@ -371,6 +381,7 @@
     left: 50%;
     top: 50%;
   }
+
   .glowContainer {
     position: absolute;
     width: 0px;
